--- a/home.html
+++ b/home.html
@@ -403,18 +403,16 @@
         text-decoration: underline;
       }
     </style>
-    
-
     <footer>
-      <div class="footer-content">
+      <div class="footer-content" style="text-align: center; padding: 20px;">
         <p>CorruptStudios &copy; 2025 | 
           <a href="privacy-policy.html">Privacy Policy</a> | 
           <a href="terms-of-service.html">Terms of Service</a>
         </p>
         <p>Join us on Discord: <a href="https://discord.com" target="_blank">Click here</a></p>
+        <p style="font-size: 0.8em; color: #888;">Web development by CodeForge</p>
       </div>
     </footer>
-    
   <script>
     const tabLinks = document.querySelectorAll('.tab-link');
     const sections = document.querySelectorAll('section');
