--- a/staff.html
+++ b/staff.html
@@ -30,7 +30,7 @@
       max-width: 900px;
       margin: auto;
       box-shadow: 0 0 25px rgba(0, 170, 255, 0.3);
-      text-align: center; /* Center text within the form */
+      text-align: center;
     }
 
     h2 {
@@ -81,11 +81,10 @@
       background-color: #0088cc;
     }
 
-    /* Logo styling */
     .logo {
       display: block;
       margin: 0 auto 20px;
-      max-width: 120px; /* Increase the logo size if needed */
+      max-width: 120px;
       height: auto;
     }
   </style>
@@ -93,7 +92,6 @@
 <body>
 
   <form id="staffApplication">
-    <!-- Logo -->
     <img src="https://media.discordapp.net/attachments/1308488079316877374/1361312844221644860/8jS7TUI.png?ex=67fef5a2&is=67fda422&hm=94141e33ba4b591481ef38995d75934a1d433b7f4ce214519f4c2b19362174af&=" class="logo" alt="Logo" />
 
     <h2>Staff Application</h2>
