--- a/homepage.html
+++ b/homepage.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: url('https://media.discordapp.net/attachments/1338611451803205733/1361315620485861386/f5QKDnr.png?ex=6816b337&is=681561b7&hm=5a97c3e3383d7f18202a276df1316a3da76c6f8cc4d274268fe29a4d570a5a66&=&width=1604&height=902') no-repeat center center fixed; /* Direct link to the image */
+      background: url('./assets/logo/background.png') no-repeat center center fixed; /* Direct link to the image */
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
