--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </head>
 <body>
   <div class="logo">
-      <img src="https://media.discordapp.net/attachments/1308488079316877374/1361312844221644860/8jS7TUI.png?ex=67fe4ce2&is=67fcfb62&hm=3c362a54130fdf7356e12429c0dacdd4b333402497031d97016b2de4ba38b6e8&=" alt="Logo" />
+      <img src="./assets/logo/corrupt.png" alt="Logo" />
     </a>
   </div>
 
