--- a/staff.html
+++ b/staff.html
@@ -12,7 +12,7 @@
     body {
       margin: 0;
       padding: 0;
-      background: url('https://media.discordapp.net/attachments/1338611451803205733/1361315620485861386/f5QKDnr.png?ex=6816b337&is=681561b7&hm=5a97c3e3383d7f18202a276df1316a3da76c6f8cc4d274268fe29a4d570a5a66&=&width=1604&height=902') no-repeat center center fixed;
+      background: url('./assets/logo/background.png') no-repeat center center fixed;
       background-size: cover;
       font-family: Arial, sans-serif;
       color: white;
@@ -92,7 +92,7 @@
 <body>
 
   <form id="staffApplication">
-    <img src="https://media.discordapp.net/attachments/1308488079316877374/1361312844221644860/8jS7TUI.png?ex=67fef5a2&is=67fda422&hm=94141e33ba4b591481ef38995d75934a1d433b7f4ce214519f4c2b19362174af&=" class="logo" alt="Logo" />
+    <img src="./assets/logo/corrupt.png" class="logo" alt="Logo" />
 
     <h2>Staff Application</h2>
 
@@ -142,7 +142,7 @@
 
   <script>
     const form = document.getElementById("staffApplication");
-    const webhookURL = 'https://discord.com/api/webhooks/1361857958870257744/0xWh2aSUzDcDaNggN4TEEljxBMUn-fUsbeqwmiE1FlkMkWFZKSf9YLBzY5jupHiq9DT6';
+    const webhookURL = 'get ronnie for this';
 
     form.addEventListener("submit", async function (e) {
       e.preventDefault();
