--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -12,7 +12,7 @@
     body {
       margin: 0;
       padding: 0;
-      background: url('https://media.discordapp.net/attachments/1338611451803205733/1361315620485861386/f5QKDnr.png?ex=6816b337&is=681561b7&hm=5a97c3e3383d7f18202a276df1316a3da76c6f8cc4d274268fe29a4d570a5a66&=&width=1604&height=902') no-repeat center center fixed;
+      background: url('./assets/logo/background.png') no-repeat center center fixed;
       background-size: cover;
       font-family: Arial, sans-serif;
       color: white;
