--- a/index.html
+++ b/index.html
@@ -84,16 +84,16 @@
         <img src="https://img.icons8.com/ios-filled/50/ffffff/shopping-bag.png" alt="Store" />
         <span>Store</span>
       </div>
-    </a>
+    </a> 
 
-    <a href="https://discord.gg/86PFTdEUzS" target="_blank">
+    <a href="bugreport.html" target="_blank">
       <div class="nav-item">
         <img src="https://img.icons8.com/ios-filled/50/ffffff/bug.png" alt="Bug Report" />
         <span>Bug report</span>
       </div>
     </a>
 
-    <a href="https://discord.gg/corrupt5m" target="_blank">
+    <a href="https://discord.gg/corruptrp" target="_blank">
       <div class="nav-item">
         <img src="https://img.icons8.com/ios-filled/50/ffffff/discord-logo.png" alt="Discord" />
         <span>Discord</span>
