--- a/home.html
+++ b/home.html
@@ -210,11 +210,14 @@
     <img src="https://i.imgur.com/BJri1BN.png" alt="Corrupt Logo" class="logo" />
     <nav>
       <a href="#" class="tab-link active" data-section="home">Home</a>
-      <a href="#" class="tab-link" data-section="rules">Rules</a>
+      <a href="#" class="tab-link" data-section="rules" onclick="openRulesPage()">Rules</a>
       <a href="#" class="tab-link" data-section="applications">Applications</a>
       <a href="#" class="tab-link" data-section="credits">Credits</a>
     </nav>
   </header>
+
+  
+  
 
   <div class="content">
     <section id="home">
@@ -248,16 +251,14 @@
     <section id="rules" class="hidden">
       <div class="rules-box">
         <h2>Server Rules</h2>
-        <ul>
-          <li>No RDM (Random Deathmatch) or VDM (Vehicle Deathmatch)</li>
-          <li>Respect all players and staff at all times</li>
-          <li>No cheating, exploiting, or external mod menus</li>
-          <li>Serious RP is expected — remain in character</li>
-          <li>Use of microphone is required</li>
-          <li>Common sense is expected — don’t break immersion</li>
-        </ul>
+        <a href="rules.html" target="_blank" style="text-decoration: none; color: white;">
+          <p style="cursor: pointer; font-size: 1.2em; font-weight: bold; text-align: center; color: #00aaff;">
+            Click here to view the full server rules.
+          </p>
+        </a>
       </div>
     </section>
+    
 
     <section id="applications" class="hidden">
       <h2>Choose Your Application Type</h2>
