--- a/rules.html
+++ b/rules.html
@@ -6,20 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Community Rules</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #1d1d1d;
-      color: white;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      flex-direction: column;
-      min-height: 100vh;
-      padding-top: 50px;
-      position: relative;
-    }
+body {
+  font-family: Arial, sans-serif;
+  background: url('./assets/logo/background.png') no-repeat center center fixed;
+  background-size: cover;
+  color: white;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  min-height: 100vh;
+  padding-top: 50px;
+  position: relative;
+  backdrop-filter: brightness(0.9); /* Optional: dim the image slightly */
+}
+
 
     .container {
       width: 90%;
