Update to add revert button to logos

--- a/bugreport.html
+++ b/bugreport.html
@@ -88,7 +88,10 @@
 <body>
 
   <form id="bugReportForm">
-    <img src="./assets/logo/corrupt.png" class="logo" alt="Logo" />
+    <div class="logo-container">
+      <a href="home.html">
+        <img src="./assets/logo/corrupt.png" class="logo" alt="Logo" />
+      </a>
 
     <h2>Bug Report</h2>
 
