--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -21,6 +21,21 @@
       align-items: center;
       min-height: 100vh;
       flex-direction: column;
+      position: relative;
+    }
+
+    .logo {
+      position: absolute;
+      top: 20px;
+      left: 20px; /* Moved to top-left */
+      width: 50px;
+      height: 50px;
+      cursor: pointer;
+      transition: transform 0.3s ease;
+    }
+
+    .logo:hover {
+      transform: scale(1.1);
     }
 
     .content {
@@ -67,6 +82,10 @@
   </style>
 </head>
 <body>
+
+  <a href="home.html">
+    <img src="./assets/logo/corrupt.png" alt="CorruptStudios Logo" class="logo" />
+  </a>
 
   <div class="content">
     <h2>Terms of Service</h2>
