--- a/rules.html
+++ b/rules.html
@@ -100,7 +100,7 @@ body {
 <body>
 
 
-  <a href="home.html" target="_blank">
+  <a href="home.html">
     <img src="./assets/logo/corrupt.png" alt="Logo" class="logo" />
   </a>
 
