--- a/home.html
+++ b/home.html
@@ -408,8 +408,10 @@
           <a href="privacy-policy.html">Privacy Policy</a> | 
           <a href="terms-of-service.html">Terms of Service</a>
         </p>
-        <p>Join us on Discord: <a href="https://discord.com" target="_blank">Click here</a></p>
-        <p style="font-size: 0.8em; color: #888;">Web development by CodeForge</p>
+        <p>Join us on Discord: <a href="https://discord.com/invite/corruptrp" target="_blank">Click here</a></p>
+        <p style="font-size: 0.8em; color: #888;">
+          <a href="design.html" style="color: #888; text-decoration: none;">Web development by CodeForge</a>
+        </p>        
       </div>
     </footer>
   <script>
