--- a/rules.html
+++ b/rules.html
@@ -20,7 +20,7 @@ body {
   min-height: 100vh;
   padding-top: 50px;
   position: relative;
-  backdrop-filter: brightness(0.9); /* Optional: dim the image slightly */
+  backdrop-filter: brightness(0.9);
 }
 
 
@@ -31,7 +31,6 @@ body {
       padding: 20px;
     }
 
-    /* Neon Border Effect */
     .neon-border {
       border: 2px solid #00aaff;
       padding: 20px;
