--- a/design.html
+++ b/design.html
@@ -7,70 +7,169 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     body {
-      background: #121212;
-      color: #f1f1f1;
       font-family: 'Inter', sans-serif;
+      background-color: #121212;
+      color: #f1f1f1;
+      line-height: 1.5;
+    }
+
+    .hero {
+      background-image: url('https://via.placeholder.com/1500x800');
+      background-size: cover;
+      background-position: center;
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      min-height: 100vh;
-      padding: 2rem;
       text-align: center;
+      color: #fff;
+      position: relative;
     }
 
-    .glass {
-      background: rgba(255, 255, 255, 0.06);
-      backdrop-filter: blur(14px);
-      border-radius: 16px;
-      padding: 40px;
-      max-width: 700px;
-      box-shadow: 0 0 40px rgba(100, 100, 255, 0.1);
-      animation: fadeIn 1s ease-out;
+    .hero-overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(0, 0, 0, 0.4);
     }
 
-    .glow-btn {
+    .hero-content {
+      z-index: 10;
+    }
+
+    .hero h1 {
+      font-size: 4rem;
+      font-weight: 800;
+      margin-bottom: 20px;
+      text-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+    }
+
+    .hero p {
+      font-size: 1.25rem;
+      margin-bottom: 30px;
+    }
+
+    .hero .glow-btn {
       background: linear-gradient(90deg, #6c5ce7, #a29bfe);
-      color: white;
+      padding: 14px 36px;
+      font-size: 1.2rem;
       border-radius: 50px;
-      padding: 12px 28px;
-      font-size: 16px;
-      font-weight: 600;
-      box-shadow: 0 0 12px rgba(103, 58, 183, 0.4);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      display: inline-block;
-      margin-top: 24px;
+      box-shadow: 0 0 12px rgba(103, 58, 183, 0.6);
+      transition: all 0.3s ease;
     }
 
-    .glow-btn:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 0 20px rgba(103, 58, 183, 0.6);
+    .hero .glow-btn:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 0 20px rgba(103, 58, 183, 0.8);
     }
 
-    @keyframes fadeIn {
+    footer {
+      background-color: #1f1f1f;
+      color: #aaa;
+      padding: 30px 0;
+      text-align: center;
+      border-top: 4px solid #333;
+    }
+
+    .footer-links a {
+      margin: 0 15px;
+      color: #aaa;
+      font-size: 1rem;
+      text-decoration: none;
+      transition: color 0.3s ease;
+    }
+
+    .footer-links a:hover {
+      color: #fff;
+    }
+
+    #contactModal {
+      display: none;
+      position: fixed;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.7);
+      z-index: 100;
+      justify-content: center;
+      align-items: center;
+      animation: fadeInModal 0.5s ease-out;
+    }
+
+    #contactModal .modal-content {
+      background-color: #2c2c2c;
+      border-radius: 16px;
+      padding: 3rem;
+      max-width: 600px;
+      width: 100%;
+      color: #fff;
+      text-align: center;
+      box-shadow: 0 0 40px rgba(100, 100, 255, 0.4);
+    }
+
+    #contactModal button.close-btn {
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
+      color: white;
+      font-size: 2rem;
+      background: transparent;
+      border: none;
+      cursor: pointer;
+    }
+
+    @keyframes fadeInModal {
       from {
         opacity: 0;
-        transform: translateY(20px);
       }
       to {
         opacity: 1;
-        transform: translateY(0);
       }
     }
   </style>
 </head>
 <body>
 
-  <div class="glass">
-    <h1 class="text-4xl font-extrabold text-white mb-4">Designed by CodeForge</h1>
-    <p class="text-gray-300 text-lg mb-6">
-      This website was proudly designed and developed by <strong>CodeForge</strong> — a modern web design studio specializing in stylish, performant, and user-focused digital experiences.
-    </p>
-    <p class="text-gray-400 mb-6">
-      We partnered with <strong>CorruptStudios</strong> to bring their unique vision to life with a bold, atmospheric, and responsive design that reflects their identity and brand.
-    </p>
-    <a href="index.html" class="glow-btn">Back to CorruptStudios</a>
+  <section class="hero">
+    <div class="hero-overlay"></div>
+    <div class="hero-content">
+      <h1>Designed by CodeForge</h1>
+      <p>Your digital experience, crafted with precision.</p>
+      <a href="index.html" class="glow-btn">Back to CorruptStudios</a>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 CodeForge. Crafted with passion and precision.</p>
+    <div class="footer-links">
+      <a href="index.html">CorruptStudios</a>
+      <a href="#" onclick="toggleModal()">Contact</a>
+      <a href="#">Visit CodeForge</a>
+    </div>
+  </footer>
+
+  <div id="contactModal" class="flex">
+    <div class="modal-content relative">
+      <button class="close-btn" onclick="toggleModal()">×</button>
+      <h2>Contact Us</h2>
+      <p>If you have any inquiries, feel free to reach out to us at:</p>
+      <p><strong>codeforge.co.uk@gmail.com</strong></p>
+    </div>
   </div>
+
+  <script>
+    function toggleModal() {
+      const modal = document.getElementById('contactModal');
+      modal.style.display = (modal.style.display === 'flex') ? 'none' : 'flex';
+    }
+  </script>
 
 </body>
 </html>
