--- a/design.html
+++ b/design.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Designed by CodeForge</title>
+  <title>Designed by codeforge</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
   <style>
@@ -140,18 +140,18 @@
   <section class="hero">
     <div class="hero-overlay"></div>
     <div class="hero-content">
-      <h1>Designed by CodeForge</h1>
+      <h1>Designed by codeforge</h1>
       <p>Your digital experience, crafted with precision.</p>
       <a href="index.html" class="glow-btn">Back to CorruptStudios</a>
     </div>
   </section>
 
   <footer>
-    <p>&copy; 2025 CodeForge. Crafted with passion and precision.</p>
+    <p>&copy; 2025 codeforge. Crafted with passion and precision.</p>
     <div class="footer-links">
       <a href="index.html">CorruptStudios</a>
       <a href="#" onclick="toggleModal()">Contact</a>
-      <a href="#">Visit CodeForge</a>
+      <a href="#">Visit codeforge</a>
     </div>
   </footer>
 
