--- a/home.html
+++ b/home.html
@@ -410,7 +410,7 @@
         </p>
         <p>Join us on Discord: <a href="https://discord.com/invite/corruptrp" target="_blank">Click here</a></p>
         <p style="font-size: 0.8em; color: #888;">
-          <a href="design.html" style="color: #888; text-decoration: none;">Web development by CodeForge</a>
+          <a href="design.html" style="color: #888; text-decoration: none;">Web development by yusd3v</a>
         </p>        
       </div>
     </footer>
